--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/RitisBarauskas/movies-explorer-frontend/",
+  "homepage": "https://ritisbarauskas.github.io/movies-explorer-frontend/",
   "name": "movies-explorer-frontend",
   "version": "0.1.0",
   "private": true,
